# hackathon-booster

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml  tools.txt
backend/: pyproject.toml
backend/app/: main.py
backend/app/alembic/versions/: e150d3895407_create_account_table.py
backend/app/api/: main.py
backend/app/api/routes/: health.py
examples/: fastapi_example.py  psycopg_example.ipynb  sentiment_analysis.ipynb  sklearn_examples.ipynb
frontend/: .prettierrc  eslint.config.mjs  package.json  pnpm-lock.yaml
